Expand keyframe distance to 5.5 seconds.

Essentially the same as ~5 seconds after rounding to seconds.

BUG=897954
TEST=updated tests.
R=​tmathmeyer

Change-Id: Id280d2c225b85f02c2f559ccbeacbb3d34569e5e
Reviewed-on: https://chromium-review.googlesource.com/c/1295269
Reviewed-by: Ted Meyer <tmathmeyer@chromium.org>
Commit-Queue: Dale Curtis <dalecurtis@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#602013}(cherry picked from commit 25c9c8e096aa93c28a4c5553c240a595dc08e74b [formerly 456808a6f75db746452b7e3c825a7c808fb74fe9])
Reviewed-on: https://chromium-review.googlesource.com/c/1307993
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/branch-heads/3578@{#402}
Cr-Branched-From: abbd18012032883c3113b3bfc5d59d25b4836c5f [formerly 4226ddf99103e493d7afb23a4c7902ee496108b6]-refs/heads/master@{#599034}
Former-commit-id: ec3fa3dbe8b0ea0857e7c63b1b57d042484bd18a